changed background-size to cover and added template header text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
             </nav>
             <header class="header">
-                
+                <h1>Test Header</h1>
             </header>
 
             <section>
