--- a/products.html
+++ b/products.html
@@ -4,6 +4,8 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
         <link rel="stylesheet" href="css/layout.css" type="text/css">
+        <link rel="stylesheet" href="css/products-styles.css" type="text/css">
+
 
     </head>
 
@@ -14,16 +16,16 @@
 
                 <ul>
                     <li>Home</li>
-                    <li><a href="products.html">Products</li></a>
+                    <li><a href="products.html">Products</a></li>
                     <li>History</li>
                     <li>Testimonials</li>
                 </ul>
             </nav>
             <header class="header">
-                <h1>Test Header</h1>
+                <h1>Products</h1>
             </header>
 
-            <section>
+            <section id="product-content" class="product-container">
 
 
             </section>
@@ -37,5 +39,7 @@
             <span class="copywrite">&copy Nostrum 2017</span>
             
         </footer>
+        <script src="/js/products-factory.js" type="text/javascript"></script>
+        <script src="/js/products-controller.js" type="text/javascript"></script>
     </body>
 </html>
