added nav links

--- a/history.html
+++ b/history.html
@@ -13,10 +13,10 @@
                 <img src="/images/nostrum-logo.png" width="150px" alt="Nostrum Logo">
 
                 <ul>
-                    <li>Home</li>
-                    <li>Products</li>
-                    <li>History</li>
-                    <li>Testimonials</li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/products.html">Products</a></li>
+                    <li><a href="/history.html">History</a></li>
+                    <li><a href="/Testimonials.html">Testimonials</a></li>
                 </ul>
             </nav>
             <header class="header">
