made grid responsive and fixed overlap with img width 100% and media query, replaced images with new stock images.

--- a/products.html
+++ b/products.html
@@ -24,11 +24,12 @@
             <header class="header">
                 <h1>Products</h1>
             </header>
+            <div class="centered-content">
+                <section id="product-content" class="product-container">
 
-            <section id="product-content" class="product-container">
 
-
-            </section>
+                </section>
+            </div>
 
         </section> <!-- end of main-content -->
 
