further refinement of smallest media query and added nav links

--- a/products.html
+++ b/products.html
@@ -5,8 +5,6 @@
         <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
         <link rel="stylesheet" href="css/layout.css" type="text/css">
         <link rel="stylesheet" href="css/products-styles.css" type="text/css">
-
-
     </head>
 
     <body>
@@ -15,21 +13,21 @@
                 <img src="/images/nostrum-logo.png" width="150px" alt="Nostrum Logo">
 
                 <ul>
-                    <li>Home</li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li>History</li>
-                    <li>Testimonials</li>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
                 </ul>
             </nav>
             <header class="header">
                 <h1>Products</h1>
             </header>
-            <div class="centered-content">
+            <!-- <div class="centered-content"> -->
                 <section id="product-content" class="product-container">
 
 
                 </section>
-            </div>
+            <!-- </div> -->
 
         </section> <!-- end of main-content -->
 
