change nav link color and hover behavior, replaced twitter and email icons with white icons and added Georgia as default font and lowered default paragraph font-size to .9em

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
         <link rel="stylesheet" href="css/layout.css" type="text/css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -14,7 +14,7 @@
 
                 <ul>
                     <li>Home</li>
-                    <li>Products</li>
+                    <li>Products</a></li>
                     <li>History</li>
                     <li>Testimonials</li>
                 </ul>
@@ -25,14 +25,14 @@
 
             <section>
 
-
+                    
             </section>
 
         </section> <!-- end of main-content -->
 
         <footer class="footer">
-            <a href="http://twitter.com"><img src="/images/twitter_logo_blue.png" width="40px" alt="Twitter"></a>
-            <a href="mailto:merlin@nostrum.com"><img src="/images/logo_gmail_48px.png" width="32px" alt="Email" id="gmail-logo"></a>
+            <a href="http://twitter.com"><i class="fa fa-twitter"></i></a>
+            <a href="mailto:merlin@nostrum.com"><i class="fa fa-envelope" ></i></a>
             <span class="phone-number">(888) 888-8888</span>
             <span class="copywrite">&copy Nostrum 2017</span>
             
