--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <img src="/images/nostrum-logo.png" width="150px" alt="Nostrum Logo">
 
                 <ul>
-                    <li>Home</li>
-                    <li><a href="products.html">Products</li></a>
-                    <li>History</li>
-                    <a href="testimonials.html"><li>Testimonials</li></a>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/products.html">Products</a></li>
+                    <li><a href="/history.html">History</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
                 </ul>
             </nav>
             <header class="header">
