--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
         <link rel="stylesheet" href="css/layout.css" type="text/css">
         <link rel="stylesheet" href="css/products-styles.css" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -13,10 +14,10 @@
                 <img src="/images/nostrum-logo.png" width="150px" alt="Nostrum Logo">
 
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="history.html">History</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/products.html">Products</a></li>
+                    <li><a href="/history.html">History</a></li>
+                    <li><a href="/testimonials.html">Testimonials</a></li>
                 </ul>
             </nav>
             <header class="header">
@@ -32,12 +33,13 @@
         </section> <!-- end of main-content -->
 
         <footer class="footer">
-            <a href="http://twitter.com"><img src="/images/twitter_logo_blue.png" width="40px" alt="Twitter"></a>
-            <a href="mailto:merlin@nostrum.com"><img src="/images/logo_gmail_48px.png" width="32px" alt="Email" id="gmail-logo"></a>
+            <a href="http://twitter.com"><i class="fa fa-twitter"></i></a>
+            <a href="mailto:merlin@nostrum.com"><i class="fa fa-envelope" ></i></a>
             <span class="phone-number">(888) 888-8888</span>
             <span class="copywrite">&copy Nostrum 2017</span>
             
         </footer>
+
         <script src="/js/products-factory.js" type="text/javascript"></script>
         <script src="/js/products-controller.js" type="text/javascript"></script>
     </body>
