--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
         <link rel="stylesheet" href="css/layout.css" type="text/css">
+        <link rel="stylesheet" href="css/home.css" type="text/css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
@@ -23,7 +24,7 @@
                 <h1>Test Header</h1>
             </header>
 
-            <section>
+            <section id="inject">
 
                     
             </section>
@@ -37,5 +38,6 @@
             <span class="copywrite">&copy Nostrum 2017</span>
             
         </footer>
+        <script src="js/home.js" > </script>
     </body>
 </html>
